feat(api): 新增对象与立绘列表接口
